<resources>
    <string name="app_name">MobyLabTema1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="awesome_text">You are awesome!</string>
    <string name="everyone_awesome_text">Everyone is awesome!</string>
    <string name="option_information">Information</string>
    <string name="option_toast">Toast</string>
    <string name="sad_text">That\'s sad!</string>
    <string name="alert_title">Important announcement</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="awesome_menu_text">Awesome Menu</string>
    <string name="choose_action_text">Choose an action</string>
    <string name="awesome_app_title">My Awesome App</string>
    <string name="start_descendant_1">Start Descendant 1</string>
    <string name="start_descendant_2">Start Descendant 2</string>
    <string name="external_activities">External Activities</string>
    <string name="start_google_maps">Start Google Maps</string>
    <string name="first_rb">First RB</string>
    <string name="second_rb">Second RB</string>
    <string name="third_rb">Third RB</string>
    <string name="first_cb">First CB</string>
    <string name="second_cb">Second CB</string>
    <string name="happy_toggle_button">Happy</string>
    <string name="sad_toggle_button">Sad</string>
    <string name="enter_text">Enter text here</string>
    <string name="save_text">Save</string>
    <string name="first_rb_selected">"First RB selected, "</string>
    <string name="second_rb_selected">"Second RB selected, "</string>
    <string name="third_rb_selected">"Third RB selected, "</string>
    <string name="first_cb_selected">"First CB selected, "</string>
    <string name="second_cb_selected">"Second CB selected, "</string>
    <string name="toggle_button_on">"ToggleButton on, "</string>
    <string name="toggle_button_off">"ToggleButton off, "</string>
    <string name="no_text">No text</string>
    <string name="text_is">"Text is "</string>
    <string name="first_decendant_title">First Descendant Activity</string>
    <string name="second_descendant_title">Second Descendant Activity</string>
    <string name="sibling_activity_text">Go to sibling activity</string>
    <string name="nothing_text">I do nothing</string>
</resources>